# python_dataScience

./: README.md
Python_datascience_00/ex00/: Hello.py
Python_datascience_00/ex01/: format_ft_time.py
Python_datascience_00/ex02/: find_ft_type.py  tester.py
Python_datascience_00/ex03/: NULL_not_found.py  tester.py
Python_datascience_00/ex04/: whatis.py
Python_datascience_00/ex05/: building.py
Python_datascience_00/ex06/: filterstring.py  ft_filter.py
Python_datascience_00/ex07/: sos.py
Python_datascience_00/ex08/: Loading.py  tester.py
Python_datascience_00/ex09/: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
Python_datascience_00/ex09/ft_package/: __init__.py  ft_package.py  main.py
Python_datascience_01/ex00/: give_bmi.py  tester.py
Python_datascience_01/ex01/: array2D.py  tester.py
Python_datascience_01/ex02/: load_image.py  tester.py
Python_datascience_01/ex03/: load_image.py  zoom.py
Python_datascience_01/ex04/: load_image.py  rotate.py
Python_datascience_01/ex05/: load_image.py  pimp_image.py  tester.py
Python_datascience_02/ex00/: load_csv.py  tester.py
Python_datascience_02/ex01/: aff_life.py  tester.py
Python_datascience_02/ex02/: aff_pop.py  load_csv.py  tester.py
Python_datascience_02/ex03/: load_csv.py  projection_life.py  tester.py
Python_datascience_03/ex00/: S1E9.py  tester.py
Python_datascience_03/ex01/: S1E7.py  S1E9.py  tester.py
Python_datascience_03/ex02/: DiamondTrap.py  S1E7.py  S1E9.py  tester.py
Python_datascience_03/ex03/: ft_calculator.py
Python_datascience_04/ex00/: statistics.py  (+1 more)
(+7 files in other folders)
