# Choosing a build backend
[build-system]
requires = ["hatchling"]          # the build backend to use, package to build the package
build-backend = "hatchling.build" # python module to use to build the package/project

# Project metadata
[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
authors = [
  { name="bebigel" },
  { email="bebigel@42.fr" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.0"
classifiers = []

[project.urls]
Homepage = "https://github.com/bebigel/ft_package"
